--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.2.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-router-dom": "^5.3.0",
@@ -18,7 +18,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
